--- a/index.html.html
+++ b/index.html.html
@@ -1,8 +1,8 @@
 <html> 
    <link href= "stylesheet.css" rel="stylesheet">
-   <body> 
+   <body>
       <div class = "title" >Basic Calculator</div> 
-      <table  class="center" > 
+      <table class="center"> 
          <tr> 
             <td colspan="3"><input type="text" id="result"/></td> 
             <td><input type="button" value="c" onclick="clr()"/> </td> 
@@ -32,6 +32,7 @@
             <td><input type="button" value="*" onclick="dis('*')"/> </td> 
          </tr> 
       </table>
+      </div>
       <script src="javascript.js"></script> 
    </body> 
 </html> 
