--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <div class = "title" >Basic Calculator</div> 
       <table class="center"> 
          <tr> 
-            <td colspan="3"><input type="text" id="result"/></td> 
+            <td colspan="3"><input type="text" disabled id="result"/></td> 
             <td><input type="button" value="C" onclick="clr()"/> </td> 
          </tr> 
          <tr> 
