--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <video src="https://css-tricks-post-videos.s3.us-east-1.amazonaws.com/blurry-trees.mov" autoplay loop playsinline muted></video>
 <html> 
+   <head>
+      <title>Calculator</title>
+   </head>   
    <link href= "stylevid.css" rel="stylesheet">
    <body>
       <div class = "title" >Basic Calculator</div> 
