--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <video src="https://css-tricks-post-videos.s3.us-east-1.amazonaws.com/blurry-trees.mov" autoplay loop playsinline muted></video>
 <html> 
    <head>
-       
+       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Calculator</title>
    </head>   
    <link href= "stylevid.css" rel="stylesheet">
